OO-7499: Improvements in UI element naming for usability and consistency + refactoring